# pos-api/src/main/resources/openapi.yml
@@ -112,6 +112,21 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /carts/checkout:
+    post:
+      summary: Check out the items in cart
+      operationId: checkoutAll
+      tags:
+        - checkout
+      responses:
+        200:
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: string
+        400:
+          description: bad request
   /counter/checkout:
     post:
       summary: Compute the total price of products in a Cart
@@ -217,6 +232,25 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/OrderOutlines"
+    post:
+      summary: Create a new order
+      operationId: createOrder
+      tags:
+        - order
+      requestBody:
+        description: The data
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Payment"
+      responses:
+        200:
+          description: ok, return the order ID
+          content:
+            application/json:
+              schema:
+                type: string
   /orders/{orderId}:
     get:
       summary: Get the detail info of the specified order
@@ -296,6 +330,16 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Product"
+    Payment:
+      type: object
+      properties:
+        total:
+          type: number
+          format: double
+        items:
+          type: array
+          items:
+            $ref: "#/components/schemas/Item"
     Order:
       type: object
       properties:
